--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    remaining_neighbors = list(map(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
+    "    remaining_neighbors = list(filter(lambda neighbor: neighbor != first_neighbor, neighbors))\n",
     "    "
    ]
   },
